--- a/src/styles/global/_variables.scss
+++ b/src/styles/global/_variables.scss
@@ -1,18 +1,11 @@
-$Poppins-Thin: "Poppins-Thin";
-$Poppins-ThinItalic: "Poppins-ThinItalic";
-$Poppins-ExtraLight: "Poppins-ExtraLight";
-$Poppins-ExtraLightItalic: "Poppins-ExtraLightItalic";
-$Poppins-Light: "Poppins-Light";
-$Poppins-LightItalic: "Poppins-LightItalic";
-$Poppins-Regular: "Poppins-Regular";
-$Poppins-Medium: "Poppins-Medium";
-$Poppins-MediumItalic: "Poppins-MediumItalic";
-$Poppins-SemiBold: "Poppins-SemiBold";
-$Poppins-SemiBoldItalic: "Poppins-SemiBoldItalic";
-$Poppins-Bold: "Poppins-Bold";
-$Poppins-BoldItalic: "Poppins-BoldItalic";
-$Poppins-ExtraBold: "Poppins-ExtraBold";
-$Poppins-ExtraBoldItalic: "Poppins-ExtraBoldItalic";
-$Poppins-Black: "Poppins-Black";
-$Poppins-BlackItalic: "Poppins-BlackItalic";
+// Black
+$black-900: rgb(0, 0, 0);
+
+// White
+$white-900: rgba(255, 255, 255);
+
+
+// Red
+$red-900: rgb(193, 17, 25);
+$red-800: rgb(229, 9, 20);
 
