--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,6 +1,7 @@
 @import "./variable.scss";
 
 @mixin nf-default-box {
+  box-sizing: border-box;
   min-height: auto;
   height: 100%;
   padding: 3.5rem 0;
@@ -8,6 +9,19 @@
   display: flex;
   justify-content: center;
   color: $white-900;
-  border-bottom: .5rem solid $black-800;
+  border-bottom: 0.5rem solid $black-800;
   position: relative;
+}
+
+@mixin title-and-desc {
+  h1 {
+    font-size: 2rem;
+    font-weight: 700;
+    margin: 0;
+  }
+  p {
+    margin: 1rem 0 0;
+    font-size: 1.125rem;
+    font-weight: 400;
+  }
 }
