--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,8 +1,48 @@
 @use "./variable.scss" as *;
+@use "./media.scss" as *;
 
 @mixin button {
   padding: 0.25rem 1rem;
   background: $red-800;
   border: 2px solid $red-800;
   border-radius: 5px;
+}
+
+@mixin hero__card-row {
+  box-sizing: border-box;
+  text-align: center;
+  color: $white-900;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  min-height: auto;
+  padding: 3.5rem 0;
+}
+
+@mixin hero__card-divider {
+  position: absolute;
+  height: 0.5rem;
+  width: 100%;
+  bottom: -0.5rem;
+  background-color: $black-800;
+}
+
+@mixin hero__card {
+  margin: auto;
+  max-width: calc(100% - 3rem);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .hero__title {
+    margin: 0;
+    font-size: 2rem;
+    font-weight: 700;
+  }
+  .hero__text {
+    margin: 1rem 0 0;
+    font-size: 1.125rem;
+    font-weight: 400;
+  }
 }
