--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -19,6 +19,9 @@
   height: 100%;
   min-height: auto;
   padding: 3.5rem 0;
+  @media screen and (min-width: $sm) {
+    padding: 4.5rem 0;
+  }
 }
 
 @mixin hero__card-divider {
@@ -35,6 +38,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
   .hero__title {
     margin: 0;
     font-size: 2rem;
