--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -1,6 +1,7 @@
-$white-900: rgb(255,255,255);
+$white-900: rgb(255, 255, 255);
 
 $black-900: rgb(0, 0, 0);
-$black-800: rgb(35,35,35);
+$black-800: rgb(35, 35, 35);
+$black-700: rgba(128, 128, 128, 0.7);
 
 $red-800: rgb(229, 9, 20);
